tools/tests/errors/surf_name_05.ki
# name resolution: a typo'd builtin is an undefined name
discard lenght([1, 2, 3])
